Assert crash when open Brush preview in Outliner #57590

Closed
opened 2018-11-02 19:34:12 +01:00 by Antonio Vazquez · 5 comments

Windows 10 - Last source compiled.

  1. Start default scene
  2. In outliner, select Data API
  3. Select Brushes>Add>Preview>Image Preview
  4. Crash

(Tested in 2.79 and works)

Extract of the crash:

25: BLI_system_backtrace - 0xFD679350
24: ui_but_value_get - 0xFC1410B0
23: ui_but_update_ex - 0xFC1438E0
22: ui_but_update - 0xFC144610
21: uiDefButR_prop - 0xFC13C520
20: uiDefAutoButR - 0xFC1AF0B0
19: outliner_draw_rnabuts - 0xFBEDC870
18: outliner_draw_rnabuts - 0xFBEDC870
17: outliner_draw_rnabuts - 0xFBEDC870
16: outliner_draw_rnabuts - 0xFBEDC870
15: outliner_draw_rnabuts - 0xFBEDC870
14: outliner_draw_rnabuts - 0xFBEDC870
13: draw_outliner - 0xFBED7FA0
12: outliner_main_region_draw - 0xFBECE6A0
11: ED_region_do_draw - 0xFC4638B0
10: wm_draw_window_offscreen - 0xFBDBECD0
BLI_assert failed: c:\myblender\blenderdev\blender\source\blender\editors\interface\interface.c:1928, ui_but_value_get(), at 'but->rnaindex != -1'

Windows 10 - Last source compiled. 1) Start default scene 2) In outliner, select Data API 3) Select Brushes>Add>Preview>Image Preview 4) Crash (Tested in 2.79 and works) Extract of the crash: ``` 25: BLI_system_backtrace - 0xFD679350 24: ui_but_value_get - 0xFC1410B0 23: ui_but_update_ex - 0xFC1438E0 22: ui_but_update - 0xFC144610 21: uiDefButR_prop - 0xFC13C520 20: uiDefAutoButR - 0xFC1AF0B0 19: outliner_draw_rnabuts - 0xFBEDC870 18: outliner_draw_rnabuts - 0xFBEDC870 17: outliner_draw_rnabuts - 0xFBEDC870 16: outliner_draw_rnabuts - 0xFBEDC870 15: outliner_draw_rnabuts - 0xFBEDC870 14: outliner_draw_rnabuts - 0xFBEDC870 13: draw_outliner - 0xFBED7FA0 12: outliner_main_region_draw - 0xFBECE6A0 11: ED_region_do_draw - 0xFC4638B0 10: wm_draw_window_offscreen - 0xFBDBECD0 BLI_assert failed: c:\myblender\blenderdev\blender\source\blender\editors\interface\interface.c:1928, ui_but_value_get(), at 'but->rnaindex != -1' ```
Author
Member

Added subscriber: @antoniov

Added subscriber: @antoniov
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Can confirm this, checking...

Can confirm this, checking...

This issue was referenced by b0752cd7a0

This issue was referenced by b0752cd7a05187923fcbdfba974899a6039cfd2c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57590
No description provided.