Fix T57590: assert with zero length array buttons.